# cheby

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: release.yml  wheels.yml
examples/: function_basics.ipynb
include/cheby/: basis.hpp  cheby.hpp  function.hpp  utils.hpp
src/: cheby.cpp  pybind11_wrapper.cpp
tests/: cases.py  test_add.py  test_basis_derivative.py  test_basis_diffmatrix.py  test_basis_eval.py  test_derivative.py  test_integral.py  test_interpolation.py  test_multiply.py  test_norms.py  test_points1.py  test_points2.py  test_power.py  test_primitive.py  test_product_matrix.py  test_realimag.py  test_sub.py
