[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.15",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
