[build-system]
requires = [
    "setuptools>=69",
    "setuptools_scm[toml]>=8",
    "wheel",
    "cmake>=3.18",
    "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "cheby"
dynamic = ["version"]
description = "Functions represented as Chebyshev series"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Gwénaël Gabard", email = "gwenael.gabard@univ-lemans.fr" },
]
dependencies = [
    "numpy>=1.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/GwenaelGabard/cheby"
Repository = "https://github.com/GwenaelGabard/cheby"
Issues = "https://github.com/GwenaelGabard/cheby/issues"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["pp*", "*-win32", "*-manylinux_i686"]
test-command = "pytest {project}/tests -q"
test-requires = ["pytest>=8.0"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
